force-app/main/default/objects/ATM__c/ATM__c.object-meta.xml
<CustomObject>
    <label>ATM</label>
    <nameField>
        <label>ATM  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ATMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>