force-app/main/default/objects/ATM__c/fields/ATM_area__c.field-meta.xml
<CustomField>
    <fullName>ATM_area__c</fullName>
    <label>ATM Area</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>