force-app/main/default/objects/ATM__c/fields/ATM_Location__c.field-meta.xml
<CustomField>
    <fullName>ATM_Location__c</fullName>
    <label>ATM Location</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>