force-app/main/default/objects/ATM__c/fields/ATM_Number__c.field-meta.xml
<CustomField>
    <fullName>ATM_Number__c</fullName>
    <externalId>true</externalId>
    <label>ATM Number</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>