force-app/main/default/objects/ATM__c/fields/ATM_Status__c.field-meta.xml
<CustomField>
    <fullName>ATM_Status__c</fullName>
    <label>ATM Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>In Active</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>